--- a/inst/web/index.html
+++ b/inst/web/index.html
@@ -155,6 +155,8 @@ pacman::p_load_gh(&quot;trinker/pax&quot;)
 
 <p>In addition to the <code>pax</code> templating function, <strong>pax</strong> also has a few additional tools to generate <em>.R</em> and <em>test-____.R</em> scripts that add a <strong>roxygen2</strong> style <em>.R</em> file to the <em>R</em> directory as well as adding a <strong>testthat</strong> style unit test file to <em>tests/testthat</em> directory.  These actions can be done separately but it is recommended that they be combined into one function call: <code>new_r_test</code>.  This sets a <a href="http://en.wikipedia.org/wiki/Test-driven_development">test-driven development</a> expectation that as a function is created a unit test is used in the development process.</p>
 
+<p>The <code>new_vignette</code> proides a means of quickly adding an <a href="http://rmarkdown.rstudio.com/package_vignette_format.html"><strong>rmarkdown</strong></a> with the appropriate <code>title</code> field and  <code>\VignetteIndexEntry</code> set.</p>
+
 <table><thead>
 <tr>
 <th>Function</th>
@@ -172,6 +174,10 @@ pacman::p_load_gh(&quot;trinker/pax&quot;)
 <tr>
 <td><code>new_r_test</code></td>
 <td>Makes <strong>roxygen2</strong> style <em>.R</em> and <strong>testthat</strong> style unit test files from a <code>function</code> or character string</td>
+</tr>
+<tr>
+<td><code>new_vignette</code></td>
+<td>Makes <strong>rmarkdown</strong> style <em>.Rmd</em> vignette template file</td>
 </tr>
 </tbody></table>
 
